# Whiteboard

./: .gitignore  CLAUDE.md  DECISIONS.md  LOGS.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json
client/: package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  api.ts
client/src/components/: AuthPage.tsx  CanvasPage.tsx  CopyCanvasModal.tsx  Cursors.tsx  Dashboard.tsx  InviteModal.tsx  Toolbar.tsx
client/src/hooks/: useCursors.ts  useHistory.ts  useShapes.ts  useWebSocket.ts
server/: Dockerfile  pyproject.toml  schema.sql
server/app/: auth.py  db.py  main.py  ws.py
server/app/routes/: canvases.py  shapes.py  users.py
